--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,205 +1,198 @@
-table, th, td {
-  border:1px solid black;
+table,
+th,
+td {
+  border: 1px solid black;
 }
-body{ 
-  min-height: 100vh; 
+body {
+  min-height: 100vh;
   height: 100%;
-  margin: 0; 
-  z-index :10;
+  margin: 0;
+  z-index: 10;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  /* overflow: hidden; */
 }
 
-header{ 
-  min-height:50px;
-  background:lightcyan; 
+header {
+  min-height: 50px;
+  background: lightcyan;
 }
 
-footer{ 
-  min-height:50px; 
-  background:PapayaWhip; 
+footer {
+  min-height: 50px;
+  background: PapayaWhip;
   z-index: 1;
 }
 /* The article fills all the space between header & footer */
-body{ display:flex; flex-direction:column; }
-article{ flex:1; }
+body {
+  display: flex;
+  flex-direction: column;
+}
+article {
+  flex: 1;
+}
 .gradient-custom {
   /* fallback for old browsers */
   background: #6a11cb;
-  
+
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-  
+  background: -webkit-linear-gradient(
+    to right,
+    rgba(106, 17, 203, 1),
+    rgba(37, 117, 252, 1)
+  );
+
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+  background: linear-gradient(
+    to right,
+    rgba(106, 17, 203, 1),
+    rgba(37, 117, 252, 1)
+  );
+}
+.site-footer {
+  text-align: center;
+  background-color: #26272b;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 25px;
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+  color: #737373;
+}
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
+}
+.site-footer hr.small {
+  margin: 20px 0;
+}
+.site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
+}
+.site-footer a {
+  color: #737373;
+}
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links {
+  padding-left: 0;
+  list-style: none;
+}
+.footer-links li {
+  display: block;
+}
+.footer-links a {
+  color: #737373;
+}
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links.inline li {
+  display: inline-block;
+}
+.site-footer .social-icons {
+  text-align: right;
+}
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
+}
+.copyright-text {
+  margin: 0;
+}
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
   }
-  .site-footer
-  {
-    background-color:#26272b;
-    padding:45px 0 20px;
-    font-size:15px;
-    line-height:25px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    color:#737373;
+}
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
   }
-  .site-footer hr
-  {
-    border-top-color:#bbb;
-    opacity:0.5
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center;
   }
-  .site-footer hr.small
-  {
-    margin:20px 0
+}
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
+}
+.social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
+}
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
+}
+.social-icons a.facebook:hover {
+  background-color: #3b5998;
+}
+.social-icons a.twitter:hover {
+  background-color: #00aced;
+}
+.social-icons a.linkedin:hover {
+  background-color: #007bb6;
+}
+.social-icons a.dribbble:hover {
+  background-color: #ea4c89;
+}
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
   }
-  .site-footer h6
-  {
-    color:#fff;
-    font-size:16px;
-    text-transform:uppercase;
-    margin-top:5px;
-    letter-spacing:2px
-  }
-  .site-footer a
-  {
-    color:#737373;
-  }
-  .site-footer a:hover
-  {
-    color:#3366cc;
-    text-decoration:none;
-  }
-  .footer-links
-  {
-    padding-left:0;
-    list-style:none
-  }
-  .footer-links li
-  {
-    display:block
-  }
-  .footer-links a
-  {
-    color:#737373
-  }
-  .footer-links a:active,.footer-links a:focus,.footer-links a:hover
-  {
-    color:#3366cc;
-    text-decoration:none;
-  }
-  .footer-links.inline li
-  {
-    display:inline-block
-  }
-  .site-footer .social-icons
-  {
-    text-align:right
-  }
-  .site-footer .social-icons a
-  {
-    width:40px;
-    height:40px;
-    line-height:40px;
-    margin-left:6px;
-    margin-right:0;
-    border-radius:100%;
-    background-color:#33353d
-  }
-  .copyright-text
-  {
-    margin:0
-  }
-  @media (max-width:991px)
-  {
-    .site-footer [class^=col-]
-    {
-      margin-bottom:30px
-    }
-  }
-  @media (max-width:767px)
-  {
-    .site-footer
-    {
-      padding-bottom:0
-    }
-    .site-footer .copyright-text,.site-footer .social-icons
-    {
-      text-align:center
-    }
-  }
-  .social-icons
-  {
-    padding-left:0;
-    margin-bottom:0;
-    list-style:none
-  }
-  .social-icons li
-  {
-    display:inline-block;
-    margin-bottom:4px
-  }
-  .social-icons li.title
-  {
-    margin-right:15px;
-    text-transform:uppercase;
-    color:#96a2b2;
-    font-weight:700;
-    font-size:13px
-  }
-  .social-icons a{
-    background-color:#eceeef;
-    color:#818a91;
-    font-size:16px;
-    display:inline-block;
-    line-height:44px;
-    width:44px;
-    height:44px;
-    text-align:center;
-    margin-right:8px;
-    border-radius:100%;
-    -webkit-transition:all .2s linear;
-    -o-transition:all .2s linear;
-    transition:all .2s linear
-  }
-  .social-icons a:active,.social-icons a:focus,.social-icons a:hover
-  {
-    color:#fff;
-    background-color:#29aafe
-  }
-  .social-icons.size-sm a
-  {
-    line-height:34px;
-    height:34px;
-    width:34px;
-    font-size:14px
-  }
-  .social-icons a.facebook:hover
-  {
-    background-color:#3b5998
-  }
-  .social-icons a.twitter:hover
-  {
-    background-color:#00aced
-  }
-  .social-icons a.linkedin:hover
-  {
-    background-color:#007bb6
-  }
-  .social-icons a.dribbble:hover
-  {
-    background-color:#ea4c89
-  }
-  @media (max-width:767px)
-  {
-    .social-icons li.title
-    {
-      display:block;
-      margin-right:0;
-      font-weight:600
-    }
-  }
-  /* Dropdown Button */
+}
+/* Dropdown Button */
 .dropbtn {
   background-color: #fbfcfb;
   color: rgb(15, 8, 8);
@@ -220,8 +213,9 @@ article{ flex:1; }
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  left: -70px;
 }
 
 /* Links inside the dropdown */
@@ -233,10 +227,22 @@ article{ flex:1; }
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #ebf0eb;}
+.dropdown:hover .dropbtn {
+  background-color: #ebf0eb;
+}
+
+.container {
+  max-width: 1480px !important;
+  /* height: calc(100vh - 162px);
+  overflow-y: auto; */
+}
