--- a/static/css/showuser.css
+++ b/static/css/showuser.css
@@ -5,3 +5,10 @@ table {
     content: counter(tableCount); 
     counter-increment: tableCount; 
 }
+div#loading {
+    width: 35px;
+    height: 35px;
+    display: none;
+    background: url(/static/loadingimage.gif) no-repeat;
+    cursor: wait;
+    }
