--- a/templates/show_project.html
+++ b/templates/show_project.html
@@ -5,7 +5,7 @@
     <a href="{{ url_for('add_project')}}" class="btn btn-primary" style="float: right;" role="button" aria-pressed="true">Create Project</a>
   </br></br></br>
   <center>
-  <form action="{{ url_for('search_user') }}" method ="GET">
+  <form action="{{ url_for('search_project') }}" method ="GET">
     <input name="projectname" type="projectname" placeholder="Search Project" />
     <button>Search</button>
   </form>
@@ -72,7 +72,7 @@
             {% else %}
             <td> 
               <span style="float:left;">
-              Had been spidered
+              <a>have been spidered</a>
               </span>
             </td>
             {% endif %}
