--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -11,39 +11,54 @@
   </form>
 </center></br>
     <table class="table">
-        <thead class="thead-dark">
+        <thead class="thead-dark" text-align="center">
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Username</th>
-            <th scope="col">Role</th>
-            <th scope="col">Join Date</th>
-            <th scope="col">Last Update Date</th>
-            <th scope="col">Create By</th>
-            <th scope="col">Update By</th>
-            <th scope="col">Action</th>
+            <th style="text-align: center"scope="col">#</th>
+            <th style="text-align: center"scope="col">Username</th>
+            <th style="text-align: center"scope="col">Role</th>
+            <th style="text-align: center"scope="col">Join Date</th>
+            <th style="text-align: center"scope="col">Last Update Date</th>
+            <th style="text-align: center"scope="col">Create By</th>
+            <th style="text-align: center"scope="col">Update By</th>
+            <th style="text-align: center"scope="col">Status</th>
+            <th style="text-align: center"scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
           <p style="color:red;">{{msg}}</p>
         {% for user in users %}
           <tr>
-            <th class="counterCell"></th>
-            <th scope="row">{{ user.username }}</th>
-            <td>{{ user.role }}</td>
-            <td>{{ user.join_date }}</td>
-            <td>{{ user.update_date }}</td>
-            <td>{{ user.create_by }}</td>
-            <td>{{ user.update_by }}</td>
-            <td> 
+            <th style="text-align: center"class="counterCell"></th>
+            <th style="text-align: center"class="align-middle"  scope="row">{{ user.username }}</th>
+            <td style="text-align: center"class="align-middle" >{{ user.role }}</td>
+            <td style="text-align: center"class="align-middle" >{{ user.join_date }}</td>
+            <td style="text-align: center"class="align-middle" >{{ user.update_date }}</td>
+            <td style="text-align: center"class="align-middle" >{{ user.create_by }}</td>
+            <td style="text-align: center"class="align-middle" >{{ user.update_by }}</td>
+            {% if user.isactive == 1 %}
+            <td style="text-align: center"class="align-middle">Enable</td>
+            {%else%}
+            <td style="text-align: center"class="align-middle">Disable</td>
+            {% endif %}
+            <td style="text-align: center"class="align-middle"> 
               <span style="float:left;">
               <a href="{{ url_for('edituser',id= user.userid) }} "class="btn btn-primary">Edit</a>
               </span>
-              <span style="float:left;">
+              {% if user.isactive == 1 %}
+              <span style="float:left;"> 
               <form action="{{ url_for('showuser') }}" method=post >
                   <input name="userid" type=hidden value="{{ user.userid }}"/>
-                  <button id="delete" type=submit class="btn btn-danger" >Delete</button>
+                  <button id="disable" type=submit class="btn btn-danger" >Disable</button>
               </form>
             </span>
+            {% else %}
+            <span style="float:left;"> 
+              <form action="{{ url_for('enableaccount') }}" method=post >
+                  <input name="userid" type=hidden value="{{ user.userid }}"/>
+                  <button id="enable" type=submit class="btn btn-success" >Enable</button>
+              </form>
+            </span>
+            {% endif %}
             </td>
           </tr>
         {% endfor %}
