--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
       <label class="checkbox">
         <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
       </label>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button> 
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button> </br>
       <p style="color:red;">{{msg}}</p>  
     </form>
 </div>
