--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -4,11 +4,11 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/showuser.css') }}">
   </br></br></br>
   <center>
-
+    <a href="{{ url_for('report',id= project.projectid)}}" class="btn btn-success" style="float: right;" role="button" aria-pressed="true">Download Report</a>
 </center></br>
 <div>
   {% for havebug in havebug %}
-  {{ havebug.requestid}}
+  {{ havebug.requestid}}t
   {% endfor %}
   total : {{totalrequest}}
   done : {{donerequest}}
@@ -18,48 +18,47 @@
     <table class="table" style="width:100%">
         <thead class="thead-dark" style="width:100%">
           <tr>
+            <th>
+              <input type="checkbox" id="checkboxNoLabel" value="" aria-label="">
+            </th>
             <th width="5%" scope="col">#</th>
-            <th width="10%" scope="col">Project Request URL</th>
-            <th width="20%" scope="col">Status</th>
-            <th width="20%" scope="col">Bug</th>
-            <th width="50%" scope="col">Do active scan</th>
-            <th scope="col">Test by</th>
+            <th style="text-align: center" width="10%" scope="col">Project Request URL</th>
+            <th style="text-align: center" width="20%" scope="col">Status</th>
+            <th style="text-align: center" width="20%" scope="col">Bug</th>
+            <th style="text-align: center" width="50%" scope="col">Do active scan</th>
+            <th style="text-align: center" scope="col">Test by</th>
           </tr>
         </thead>
         <tbody>
           <p style="color:red;">{{msg}}</p>
         {% for request in requests %}
           <tr>
-            <th class="counterCell"></th>
-            <td>{{ request.requesturl }}</td>
-            <td>{{ request.status }}</td>
-
+            <th>
+              <input type="checkbox" id="checkboxNoLabel" value="request.requestid" aria-label="">
+            </th>
+            <th style="text-align: center" class="counterCell"></th>
+            <td >{{ request.requesturl }}</td>
+            <td style="text-align: center" >{{ request.status }}</td>
             {% if request.isscan == 1 %}
-                <td>{{request.bug}}</td>
+            <th style="text-align: center" scope="row"><a href="{{ url_for('bug_detail',id= request.requestid) }} ">{{ request.bug }}</a></th>
             {% elif request.isscan != 1%}
-              <td>Run scan to know</td>
+              <td style="text-align: center">Run scan to know</td>
             {% endif %}
       
             {% if request.isscan != 1 %}
-            <td> 
-              <span style="float:left;">
+            <td style="text-align: center" > 
+              <span style="float:center;">
               <a href="{{ url_for('activescan',id= request.requestid) }} "class="btn btn-success">Active scan</a>
               </span>
             </td>
             {% else %}
-            <td> 
-              <span style="float:left;">
+            <td style="text-align: center" > 
+              <span style="float:center;">
               Had been scanned
               </span>
             </td>
             {% endif %}
-            {% for user in users %}
-            {% if request.pentester == user.userid %}
-            <td>{{ user.username }}</td>
-            {% else %}
-            
-            {% endif %}
-            {% endfor %}
+            <td>{{ request.pentester }}</td>
           {% endfor %}
         </tbody>
       </table> 
