--- a/templates/show_project.html
+++ b/templates/show_project.html
@@ -10,49 +10,50 @@
     <button>Search</button>
   </form>
 </center></br>
+<div >
     <table class="table" style="width:100%">
         <thead class="thead-dark" style="width:100%">
           <tr>
-            <th width="5%" scope="col">#</th>
-            <th width="10%" scope="col">Project Name</th>
-            <th width="20%" scope="col">Start Date</th>
-            <th width="20%" scope="col">End Date</th>
-            <th scope="col">Target</th>
-            <th scope="col">Project Manager</th>
-            <th scope="col">Pentester</th>
-            <th scope="col">Vunls</th>
-            <th scope="col">Create by</th>
-            <th scope="col">Status</th>
-            <th width="30%" scope="col">Action</th>
-            <th width="30%" scope="col">Run spider</th>
+            <th style="text-align: center"width="5%" scope="col">#</th>
+            <th style="text-align: center"width="10%" scope="col">Project Name</th>
+            <th style="text-align: center"width="20%" scope="col">Start Date</th>
+            <th style="text-align: center"width="20%" scope="col">End Date</th>
+            <th style="text-align: center"scope="col">Target</th>
+            <th style="text-align: center"scope="col">Project Manager</th>
+            <th style="text-align: center"scope="col">Pentester</th>
+            <th style="text-align: center"scope="col">Vunls</th>
+            <th style="text-align: center"scope="col">Create by</th>
+            <th style="text-align: center"scope="col">Status</th>
+            <th style="text-align: center"scope="col">Login Required</th>
+            <th style="text-align: center"scope="col">Project Username</th>
+            <th style="text-align: center"scope="col">Project Password</th>
+            <th style="text-align: center"width="30%" scope="col">Action</th>
+            <th style="text-align: center"width="30%" scope="col">Run spider</th>
           </tr>
         </thead>
         <tbody>
           <p style="color:red;">{{msg}}</p>
         {% for project in projects %}
         
-          <tr>
-            <th class="counterCell"></th>
-            <th scope="row"><a href="{{ url_for('project_detail',id= project.projectid) }} ">{{ project.projectname }}</a></th>
-            <td>{{ project.startdate }}</td>
-            <td>{{ project.enddate }}</td>
-            <td>{{ project.target }}</td>
-            {% for user in users %}
-            {% if project.manager == user.userid %}
-            <td>{{ user.username }}</td>
+          <tr >
+            <th style="text-align: center" class="counterCell"></th>
+            <th style="text-align: center"class="align-middle" scope="row"><a href="{{ url_for('project_detail',id= project.projectid) }} ">{{ project.projectname }}</a></th>
+            <td style="text-align: center"class="align-middle" >{{ project.startdate }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.enddate }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.target }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.manager }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.pentester }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.vunls }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.create_by }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.status }}</td>
+            {% if project.login == 1 %}
+            <td style="text-align: center"class="align-middle" >Yes</td>
+            {% else %}
+            <td style="text-align: center"class="align-middle" >No</td>
             {% endif %}
-            {% if project.pentester == user.userid %}
-            <td>{{ user.username }}</td>
-            {% endif %}
-            {% endfor %}
-            <td>{{ project.vunls }}</td>
-            {% for user in users %}
-            {% if project.create_by == user.userid %}
-            <td>{{ user.username }}</td>
-            {% endif %}
-            {% endfor %}
-            <td>{{ project.status }}</td>
-            <td> 
+            <td style="text-align: center"class="align-middle" >{{ project.userinfo }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.passinfo }}</td>
+            <td style="text-align: center"class="align-middle" > 
               <span style="float:left;">
               <a href="{{ url_for('editproject',id= project.projectid) }} "class="btn btn-primary">Edit</a>
               </span>
@@ -64,20 +65,22 @@
             </span>
             </td>
             {% if project.isspider != '1' %}
-            <td> 
-              <span style="float:left;">
+            <td style="text-align: center" class="align-middle" > 
+              <span style="float:center;">
               <a href="{{ url_for('spiderscan',id= project.projectid) }} "class="btn btn-success">spider</a>
               </span>
             </td>
             {% else %}
-            <td> 
-              <span style="float:left;">
+            <td style="text-align: center" class="align-middle" > 
+              <span style="float:center;">
               <a>have been spidered</a>
               </span>
             </td>
             {% endif %}
+          </td>
           </tr>
         {% endfor %}
         </tbody>
       </table> 
+    </div>
 {% endblock %}
