--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -4,7 +4,7 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/showuser.css') }}">
   </br></br></br>
   <center>
-    <a href="{{ url_for('report',id= project.projectid)}}" class="btn btn-success" style="float: right;" role="button" aria-pressed="true">Download Report</a>
+    <a href="{{ url_for('download_report',id= project.projectid)}}" class="btn btn-success" style="float: right;" role="button" aria-pressed="true">Download Report</a>
 </center></br>
 <div>
   {% for havebug in havebug %}
@@ -19,9 +19,9 @@
         <thead class="thead-dark" style="width:100%">
           <tr>
             <th>
-              <input type="checkbox" id="checkboxNoLabel" value="" aria-label="">
+            <input name="select-all" id="select-all" type="checkbox" value="" aria-label="" onClick="toggle(this)">
             </th>
-            <th width="5%" scope="col">#</th>
+            <th style="text-align: center" width="5%" scope="col">#</th>
             <th style="text-align: center" width="10%" scope="col">Project Request URL</th>
             <th style="text-align: center" width="20%" scope="col">Status</th>
             <th style="text-align: center" width="20%" scope="col">Bug</th>
@@ -69,4 +69,13 @@
             $("#content").hide();       
         }
 // ]]></script>
+<script>
+  function toggle(source) {
+    var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+    for (var i = 0; i < checkboxes.length; i++) {
+        if (checkboxes[i] != source)
+            checkboxes[i].checked = source.checked;
+    }
+} 
+</script>
 {% endblock %}
