--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -6,12 +6,12 @@
   </br></br></br>
   <center>
   <form action="{{ url_for('search_user') }}" method ="GET">
-    <input name="username" type="username" placeholder="Search User via Username" />
+    <input style="text-align: center;width:50%;" name="username" type="username" placeholder="Search User via Username" />
     <button>Search</button>
   </form>
 </center></br>
     <table class="table">
-        <thead class="thead-dark" text-align="center">
+        <thead class="thead-dark" text-align="center" style="text-align: center;width:100%;">
           <tr>
             <th style="text-align: center"scope="col">#</th>
             <th style="text-align: center"scope="col">Username</th>
