--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,13 +23,16 @@
                 <hr class="mt-0 mb-4">
                 <div class="row pt-1">
                   <div class="col-6 mb-3">
+                    {% endfor %}
                     <h6>Recently Projects</h6>
-                    <p class="text-muted">info@example.com</p>
+                    {% for project in projects %}
+                    <a href="{{ url_for('project_detail',id= project.projectid) }}">{{project.projectname}}</a></br>
+                    {% endfor %}
                   </div>
                 </div>
               </div>
             </div>
-            {% endfor %}
+           
           </div>
         </div>
         <center style="color:red;">{{msg}}</center>
